Bug 176657 - In the "Save As" dialog for PDF-Files you can't navigate into sub folders
Summary: In the "Save As" dialog for PDF-Files you can't navigate into sub folders
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Unspecified
: NOR normal
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-12-01 23:47 UTC by kgw
Modified: 2008-12-09 21:49 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Fix (5.94 KB, patch)
2008-12-06 03:46 UTC, Rafael Fernández López
Details

Note You need to log in before you can comment on or make changes to this bug.
Description kgw 2008-12-01 23:47:03 UTC
Version:            (using Devel)
Installed from:    Compiled sources

It could well be a problem of the file dialog but in konqueror it doesn't show this phenomenon:
To reproduce:
- open PDF file
- try to save this PDF as a new file in a sub directory of the current working directory that get's listed initially when opening the file dialog. No matter what I try I can't change to the sub directory in question: single click does nothing, double click closes the dialog and saves the file in the current working directory.
Comment 1 Rafael Fernández López 2008-12-02 01:17:08 UTC
Can you please provide further information like what kind of view are you using on the open/save dialog ? (icon, detailed, tree, detailed tree...) and the exact steps to reproduce this issue ?

I had a PDF "foo.pdf" in "/home/foo/bar". Opened it with Okular. Went to save it, clicked on "bar2" that was in "/home/foo/bar/bar2". Clicked on Save, and it worked as expected.

Please update kdelibs, since I have been working today with this dialog (open/save) and maybe you hit a temporary regression while I was on it.

I can't reproduce this problem.
Comment 2 kgw 2008-12-04 19:09:22 UTC
I have tried again (build from yesterday) and it still does not work as expected. 
I start okular with "okular Frankreich\ b.pdf". When the pdf is shown I try to "save file" (in "short view"), double clicking on any directory closes the dialog and tries to save the file at it's original place. 
The important bit seems to be that the file name field was filled in, if I empty the field I can navigate, fill it in and I can't navigate folders again!
Comment 3 Rafael Fernández López 2008-12-04 20:39:25 UTC
Sorry, I just can't reproduce. I have done it exactly as you have done.

Are you using trunk ? or 4.1 branch ?
Comment 4 kgw 2008-12-04 21:34:29 UTC
I'm using trunk built just minutes ago. The bug persists. If I empty the file name field of the dialog I can navigate to different folders by double clicking on the apropiate icons. If I have a file name in the file name combobox then double clicking on any folder will close the dialog and act as if I had clicked on the ok-button.
Comment 5 Rafael Fernández López 2008-12-06 03:46:43 UTC
Created attachment 29080 [details]
Fix

I was missing context here. Your system is configured to react on double clicks, not on single clicks.

I proposed this patch on kde-core-devel mailing list, where this problem has been reported explaining the "double click" detail.
Comment 6 Rafael Fernández López 2008-12-09 21:49:11 UTC
SVN commit 895027 by ereslibre:

This gives some context to the dir operator, so it can know if it should
emit the selected signal over an item depending if it is saving or
opening, depending on user preferences when clicking: react on single or
double click.

BUG: 176657

 M  +25 -16    kdiroperator.cpp  
 M  +15 -1     kdiroperator.h  
 M  +5 -0      kfilewidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=895027