This gives some context to the dir operator, so it can know if it should emit the selected signal over an item depending if it is saving or opening, depending on user preferences when clicking: react on single or double click.

BUG: 176657

svn path=/trunk/KDE/kdelibs/; revision=895027